Update azure-pipelines.yml for Azure Pipelines

--- a/.azure/azure-pipelines.yml
+++ b/.azure/azure-pipelines.yml
@@ -20,6 +20,8 @@ steps:
     appType: 'webApp'
     WebAppName: 'gestao-contratos-webapp'
     packageForLinux: '$(System.ArtifactsDirectory)/gestao-contratos-webapp-*.zip'
+    ScriptType: 'Inline Script'
+    InlineScript: 'mv package/* .'
     enableCustomDeployment: true
     DeploymentType: 'webDeploy'
 
@@ -30,3 +32,5 @@ steps:
     appType: 'functionApp'
     WebAppName: 'gestao-contratos-service'
     packageForLinux: '$(System.ArtifactsDirectory)/gestao-contratos-service-*.zip'
+    ScriptType: 'Inline Script'
+    InlineScript: 'mv package/* .'
