Update azure-pipelines.yml for Azure Pipelines

--- a/.azure/azure-pipelines.yml
+++ b/.azure/azure-pipelines.yml
@@ -24,6 +24,7 @@ steps:
     InlineScript: 'mv package/* .'
     enableCustomDeployment: true
     DeploymentType: 'webDeploy'
+    RemoveAdditionalFilesFlag: true
 
 - task: AzureRmWebAppDeployment@4
   inputs:
@@ -34,3 +35,6 @@ steps:
     packageForLinux: '$(System.ArtifactsDirectory)/gestao-contratos-service-*.zip'
     ScriptType: 'Inline Script'
     InlineScript: 'mv package/* .'
+    enableCustomDeployment: true
+    DeploymentType: 'webDeploy'
+    RemoveAdditionalFilesFlag: true
