--- a/.azure/azure-pipelines.yml
+++ b/.azure/azure-pipelines.yml
@@ -14,6 +14,7 @@ steps:
     downloadPath: '$(System.ArtifactsDirectory)'
 
 - task: AzureRmWebAppDeployment@4
+  displayName: 'Deploy Webapp'
   inputs:
     ConnectionType: 'AzureRM'
     azureSubscription: 'Free Trial(0fa5aa5e-6fee-485d-9fd6-db18a7b17c2b)'
@@ -27,6 +28,7 @@ steps:
     RemoveAdditionalFilesFlag: true
 
 - task: AzureRmWebAppDeployment@4
+  displayName: 'Deploy Service'
   inputs:
     ConnectionType: 'AzureRM'
     azureSubscription: 'Free Trial(0fa5aa5e-6fee-485d-9fd6-db18a7b17c2b)'
