--- a/.azure/azure-pipelines.yml
+++ b/.azure/azure-pipelines.yml
@@ -40,3 +40,17 @@ steps:
     enableCustomDeployment: true
     DeploymentType: 'webDeploy'
     RemoveAdditionalFilesFlag: true
+
+- task: AzureRmWebAppDeployment@4
+  displayName: 'Deploy Service - Backup'
+  inputs:
+    ConnectionType: 'AzureRM'
+    azureSubscription: 'Free Trial(0fa5aa5e-6fee-485d-9fd6-db18a7b17c2b)'
+    appType: 'functionApp'
+    WebAppName: 'gestao-contratos-service'
+    packageForLinux: '$(System.ArtifactsDirectory)/gestao-contratos-service-*.zip'
+    ScriptType: 'Inline Script'
+    InlineScript: 'mv package/* .'
+    enableCustomDeployment: true
+    DeploymentType: 'webDeploy'
+    RemoveAdditionalFilesFlag: true
