startup gestao-contratos

--- a/.azure/azure-pipelines.yml
+++ b/.azure/azure-pipelines.yml
@@ -9,7 +9,7 @@ steps:
   displayName: 'Download Release'
   inputs:
     connection: 'github.com_lmarqs'
-    userRepository: 'tecidosbr/gestao-normas'
+    userRepository: 'tecidosbr/gestao-contratos'
     defaultVersionType: 'latest'
     itemPattern: '*.tgz'
     downloadPath: '$(Agent.TempDirectory)'
@@ -33,7 +33,7 @@ steps:
     ConnectionType: 'AzureRM'
     azureSubscription: 'Avaliação Gratuita(60b55c61-13b2-4600-869e-7aa1d496e967)'
     appType: 'webApp'
-    WebAppName: 'gestao-normas-webapp'
+    WebAppName: 'gestao-contratos-webapp'
     packageForLinux: '$(Agent.TempDirectory)/webapp/package/build'
     enableCustomDeployment: true
     DeploymentType: 'zipDeploy'
@@ -43,7 +43,7 @@ steps:
     ConnectionType: 'AzureRM'
     azureSubscription: 'Avaliação Gratuita(60b55c61-13b2-4600-869e-7aa1d496e967)'
     appType: 'functionApp'
-    WebAppName: 'gestao-normas-service'
+    WebAppName: 'gestao-contratos-service'
     packageForLinux: '$(Agent.TempDirectory)/service/package'
     enableCustomDeployment: true
     DeploymentType: 'zipDeploy'
