--- a/packages/webapp/package.json
+++ b/packages/webapp/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gestao-normas-webapp",
+  "name": "gestao-contratos-webapp",
   "description": "",
   "version": "1.0.13",
   "private": true,
