--- a/packages/service/package.json
+++ b/packages/service/package.json
@@ -30,6 +30,7 @@
     "@nestjs/core": "^7.6.11",
     "@nestjs/platform-express": "^7.6.11",
     "@nestjs/swagger": "^4.7.12",
+    "mssql": "^6.3.1",
     "reflect-metadata": "^0.1.13"
   },
   "devDependencies": {
