--- a/.azure/azure-pipelines.yml
+++ b/.azure/azure-pipelines.yml
@@ -37,7 +37,8 @@ steps:
     WebAppName: 'gestao-contratos-webapp'
     packageForLinux: '$(Agent.TempDirectory)/webapp/package/build'
     enableCustomDeployment: true
-    DeploymentType: 'zipDeploy'
+    DeploymentType: 'webDeploy'
+    TakeAppOfflineFlag: false
 
 - task: AzureRmWebAppDeployment@4
   inputs:
@@ -47,4 +48,5 @@ steps:
     WebAppName: 'gestao-contratos-service'
     packageForLinux: '$(Agent.TempDirectory)/service/package'
     enableCustomDeployment: true
-    DeploymentType: 'zipDeploy'
+    DeploymentType: 'webDeploy'
+    TakeAppOfflineFlag: false
