chore: update pipeline

--- a/.azure/azure-pipelines.yml
+++ b/.azure/azure-pipelines.yml
@@ -9,7 +9,7 @@ steps:
 - task: DownloadGitHubRelease@0
   displayName: 'Download Release'
   inputs:
-    connection: 'github.com_lmarqs'
+    connection: 'lmarqs'
     userRepository: 'tecidosbr/gestao-contratos'
     defaultVersionType: 'latest'
     itemPattern: '*.tgz'
@@ -32,21 +32,25 @@ steps:
 - task: AzureRmWebAppDeployment@4
   inputs:
     ConnectionType: 'AzureRM'
-    azureSubscription: 'Avaliação Gratuita(60b55c61-13b2-4600-869e-7aa1d496e967)'
+    azureSubscription: 'Avaliação Gratuita(1)(60b55c61-13b2-4600-869e-7aa1d496e967)'
     appType: 'webApp'
     WebAppName: 'gestao-contratos-webapp'
-    packageForLinux: '$(Agent.TempDirectory)/webapp/package/build'
+    packageForLinux: '$(Agent.TempDirectory)/webapp'
+    ScriptType: 'Inline Script'
+    InlineScript: 'mv package/build/* .'
     enableCustomDeployment: true
     DeploymentType: 'webDeploy'
-    TakeAppOfflineFlag: false
+    RemoveAdditionalFilesFlag: true
 
 - task: AzureRmWebAppDeployment@4
   inputs:
     ConnectionType: 'AzureRM'
-    azureSubscription: 'Avaliação Gratuita(60b55c61-13b2-4600-869e-7aa1d496e967)'
+    azureSubscription: 'Avaliação Gratuita(1)(60b55c61-13b2-4600-869e-7aa1d496e967)'
     appType: 'functionApp'
     WebAppName: 'gestao-contratos-service'
-    packageForLinux: '$(Agent.TempDirectory)/service/package'
+    packageForLinux: '$(Agent.TempDirectory)/service'
+    ScriptType: 'Inline Script'
+    InlineScript: 'mv package\* .'
     enableCustomDeployment: true
     DeploymentType: 'webDeploy'
-    TakeAppOfflineFlag: false
+    RemoveAdditionalFilesFlag: true
