--- a/packages/service/package.json
+++ b/packages/service/package.json
@@ -24,7 +24,6 @@
   },
   "dependencies": {
     "@azure/functions": "^1.2.3",
-    "@nestjs-addons/in-memory-db": "^2.0.3",
     "@nestjs/azure-func-http": "^0.6.0",
     "@nestjs/common": "^7.6.11",
     "@nestjs/core": "^7.6.11",
@@ -32,7 +31,8 @@
     "@nestjs/swagger": "^4.7.12",
     "mssql": "^6.3.1",
     "reflect-metadata": "^0.1.13",
-    "swagger-ui-express": "^4.1.6"
+    "swagger-ui-express": "^4.1.6",
+    "typeorm": "^0.2.30"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.5.1",
