--- a/.github/workflows/devops-pipeline.yml
+++ b/.github/workflows/devops-pipeline.yml
@@ -50,6 +50,6 @@ jobs:
       if: github.ref == 'refs/heads/master'
       uses: Azure/pipelines@v1
       with:
-        azure-devops-project-url: 'https://dev.azure.com/tecidosbr-deploy/pipelines/tecidosbr.gestao-processos'
-        azure-pipeline-name: 'tecidosbr.gestao-contratos'
+        azure-devops-project-url: 'https://dev.azure.com/tecidosbr-deploy/pipelines'
+        azure-pipeline-name: 'tecidosbr.gestao-normas'
         azure-devops-token: '${{ secrets.AZURE_DEVOPS_TOKEN }}'
